fix: problem with body text not wrapping
This is fatal when the display area is small, such as on mobile devices.

--- a/scss/theme/general.scss
+++ b/scss/theme/general.scss
@@ -55,6 +55,7 @@ code {
 
 .content {
   display: flex;
+  min-width: 0px;
 
   main {
     font-size: 1.4rem;
